Fix mobile spacing in services section: update breakpoint to 768px, add proper margins, fix CSS specificity

--- a/interior-design/components/styles/services.module.scss
+++ b/interior-design/components/styles/services.module.scss
@@ -78,7 +78,6 @@
 .card_name {
   display: flex;
   justify-content: flex-start;
-  background-image: url('/SoulLogoServices.png');
   background-size: 20% 100%;
   background-position: left;
   background-repeat: no-repeat;
@@ -88,8 +87,6 @@
 .card_name_modal {
   display: flex;
   justify-content: flex-start;
-  background-image: url('/SoulLogoServices.png');
-  background-size: 20% 100%;
   background-position: left;
   background-repeat: no-repeat;
   margin-bottom: 1.5rem;
@@ -109,6 +106,7 @@
 
 .card_container ul {
   padding: 0;
+  margin: 0;
 }
 
 .card_btn {
@@ -124,7 +122,7 @@
 // learnMoreBtn uses global styles from globals.scss
 
 
-@media (max-width: 820px) {
+@media (max-width: 768px) {
   .wrapperCard {
     padding: 50px 1.5rem 0.5rem;
     overflow-x: hidden;
@@ -144,30 +142,18 @@
     margin-bottom: 1.5rem;
   }
 
-  .paragraphCard {
+  .card_box ul li.paragraphCard {
     font-size: 0.65rem;
-    margin-bottom: 0.2rem;
-    margin-top: 0;
-  }
-
-  .card_box ul li {
-    margin-top: 0;
-    padding-top: 0;
-  }
-
-  .card_box ul li:first-child {
-    margin-top: 0;
-  }
-
-  .card_box ul li:last-child {
-    margin-bottom: 0.2rem;
+    text-align: left;
+    list-style: none;
+    margin: 0.5rem 0;
   }
 
   .card_container {
     display: flex;
     flex-direction: column;
     padding: 0;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
     width: 100%;
   }
 
@@ -176,10 +162,11 @@
     padding: 1rem 0;
     margin: 0;
     width: 100%;
+    min-height: auto;
   }
 
   .card_box ul {
-    margin-top: 0;
+    margin-top: 1.5rem;
     padding-top: 0;
   }
 
@@ -188,7 +175,7 @@
   }
 
   .headingThree {
-    margin-bottom: 0.3rem;
+    margin-bottom: 0;
     margin-top: 0;
   }
 
@@ -224,14 +211,15 @@
     text-align: left;
   }
 
-  .card_box_modal li {
+  .card_box_modal li.paragraphCard {
+    font-size: 0.65rem;
     text-align: left;
     list-style: none;
     margin: 0.5rem 0;
   }
 
   .card_btn {
-    margin-top: 0.3rem;
+    margin-top: 1rem;
     width: 100%;
     display: flex;
     justify-content: flex-start;
